Added Viktors changes

--- a/gui/Cloud7/src/cloud7/main/resources/App.properties
+++ b/gui/Cloud7/src/cloud7/main/resources/App.properties
@@ -3,8 +3,8 @@
 Application.name = Cloud7
 Application.title = Cloud 7
 Application.version = 1.0
-Application.vendor = Die Holzk\u00f6pfe
-Application.homepage = www.die-holzk\u00f6pfe.de
+Application.vendor = SE2/SS2011
+Application.homepage = Lucas Jen\u00df, Marian Tietz, Viktor Fr\u00f6se, Alexander Thoden
 Application.description = A simple Java desktop application based on Swing Application Framework.
 Application.vendorId = Sun
 Application.id = Cloud7
