--- a/gui/Cloud7/src/cloud7/main/resources/AboutBox.properties
+++ b/gui/Cloud7/src/cloud7/main/resources/AboutBox.properties
@@ -2,13 +2,13 @@ title = About: ${Application.title} ${Application.version}
 
 closeAboutBox.Action.text = &Close
 
-appDescLabel.text=Danke f\u00fcr die Nutzung dieses Programms. Hoffentlich gef\u00e4llt es Dir!
+appDescLabel.text=
 
 versionLabel.text=Produkt Version:
 
 vendorLabel.text=Herlsteller:
 
-homepageLabel.text=Homepage\:
+homepageLabel.text=Autoren:
 jLabel1.text=
 #NOI18N
 jLabel1.icon=Green-iDisk-icon.png
